--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -1,9 +1,11 @@
 ---
+import '../styles/global.css';
+
 const pageTitle = "About Me";
 
 const identity = {
   firstName: "Chen Ning",
-  country: "Australia",
+  country: "Melbourne, Australia",
   occupation: "Software Engineer",
   hobbies: ["reading", "playing video games", "badminton"],
 };
@@ -13,6 +15,10 @@ const skills = ["HTML", "CSS", "JavaScript", "React", "Astro", "Writing Docs", "
 const happy = true;
 const finished = false;
 const goal = 3;
+
+const skillColor = "#003366";
+const fontWeight = "bold";
+const textCase = "uppercase";
 ---
 
 <html lang="en">
@@ -22,6 +28,13 @@ const goal = 3;
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
 		<title>{pageTitle}</title>
+        <style define:vars={{skillColor, fontWeight, textCase}}>
+        .skill {
+            color: var(--skillColor);
+            font-weight: var(--fontWeight);
+            text-transform: var(--textCase);
+        }
+        </style>
 	</head>
 	<body>
         <a href="/">Home</a>
@@ -36,14 +49,15 @@ const goal = 3;
         <p>Here are a few facts about me:</p>
         <ul>
             <li>My name is {identity.firstName}.</li>
-            <li>I live in {identity.country} and I work as a {identity.occupation}.</li>
+            <li>I'm from Kuching, the Cat City of Malaysia.</li>
+            <li>I'm currently based in {identity.country} and I work as a {identity.occupation}.</li>
             {identity.hobbies.length >= 2 &&
                 <li>My hobbies are: {identity.hobbies[0]}, {identity.hobbies[1]} and {identity.hobbies[2]}</li>
             }
             </ul>
         <p>My skills are:</p>
         <ul>
-            {skills.map((skill) => <li>{skill}</li>)}
+            {skills.map((skill) => <li class="skill">{skill}</li>)}
         </ul>
         {happy && <p>I am happy to be learning Astro!</p>}
 
